--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,16 @@
         android:theme="@style/Theme.FreePreAndroid"
         tools:targetApi="31">
         <activity
+            android:name=".RecentPeriodActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FirstPeriodActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".NicknameActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
