--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.FreePreAndroid"
         tools:targetApi="31">
         <activity
+            android:name=".FreeHomeActivity"
+            android:exported="false" />
+        <activity
             android:name=".RecentPeriodActivity"
             android:exported="false" />
         <activity
@@ -35,5 +38,4 @@
                 android:value="" />
         </activity>
     </application>
-
 </manifest>
