--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,18 @@
         android:theme="@style/Theme.FreePreAndroid"
         tools:targetApi="31">
         <activity
+            android:name=".NicknameActivity"
+            android:exported="false" />
+        <activity
+            android:name=".FreeActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EditPeriodActivity"
+            android:exported="false" />
+        <activity
+            android:name=".EditPeriodListActivity"
+            android:exported="false" />
+        <activity
             android:name=".FreeAlarmEditActivity"
             android:exported="true">
             <meta-data
@@ -40,7 +52,6 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
         <activity
             android:name=".FreeHomeActivity"
             android:exported="true" />
@@ -54,7 +65,7 @@
             android:name=".MainActivity"
             android:exported="false" />
         <activity
-            android:name=".NicknameActivity"
+            android:name=".PreActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -67,4 +78,5 @@
                 android:value="" />
         </activity>
     </application>
+
 </manifest>
