--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ dependencies {
     //입증
     implementation 'com.google.firebase:firebase-auth-ktx:21.1.0'
     //google vision
-    implementation 'com.google.android.gms:play-services-mlkit-text-recognition:18.0.2'
-
+    //implementation 'com.google.android.gms:play-services-mlkit-text-recognition:18.0.2'
+    implementation 'com.google.mlkit:text-recognition-korean:16.0.0-beta6'
+    implementation 'com.google.mlkit:text-recognition:16.0.0-beta6'
 }
