--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,8 +5,17 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
+
+    <!--네트워크로만 위치 측정 (대략적 위치, 3km이내)-->
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+    <!--GPS 센서를 사용하여 위치 측정(정확한 위치, 50m이내)-->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <!-- Required only when requesting background location access on Android 10 (API level 29) and higher. -->
+    <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+
 
     <application
         android:allowBackup="true"
@@ -18,13 +27,22 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.FreePreAndroid"
         tools:targetApi="31">
+        <!--구글 지도 api키-->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="AIzaSyCPTMTbInRNijlQfHmhrOpGQp1kyXHbFMA">
+        </meta-data>
+        <activity
+            android:name=".GoogleLoginActivity"
+            android:exported="false" />
+
         <meta-data
             android:name="com.google.mlkit.vision.DEPENDENCIES"
             android:value="ocr" />
+
         <activity
             android:name=".CameraActivity"
-            android:exported="true"/>
-
+            android:exported="true" />
         <activity
             android:name=".NicknameActivity"
             android:exported="false" />
@@ -65,7 +83,7 @@
             android:name=".MainActivity"
             android:exported="false" />
         <activity
-            android:name=".GoogleLoginActivity"
+            android:name=".GoogleMapActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
