--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,7 +46,7 @@
             android:exported="true" />
         <activity
             android:name=".NicknameActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".PreActivity"
             android:exported="false" />
