--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,6 +42,9 @@ android {
     viewBinding{
         enabled true
     }
+    dataBinding{
+        enabled true
+    }
 }
 
 dependencies {
@@ -52,6 +55,8 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'com.google.android.gms:play-services-places:17.0.0'
     implementation 'com.google.android.libraries.places:places:2.5.0'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
@@ -76,8 +81,6 @@ dependencies {
     implementation 'com.google.mlkit:text-recognition-korean:16.0.0-beta6'
     implementation 'com.google.mlkit:text-recognition:16.0.0-beta6'
 
-
-
     //google-map
     implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
@@ -86,6 +89,10 @@ dependencies {
     // retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.9.0' // 레트로핏 설치 (필수)
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0' // 컨버터
-
     //15414191f5f6d458e8ab572b0c635477ed971d05
+
+    //캘린더
+    implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
+    implementation 'com.jakewharton.threetenabp:threetenabp:1.1.1'
+
 }
