--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" /> <!-- GPS 센서를 사용하여 위치 측정(정확한 위치, 50m이내) -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" /> <!-- Required only when requesting background location access on Android 10 (API level 29) and higher. -->
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
+    <uses-permission android:name="android.permission.READ_CALENDAR" />
+    <uses-permission android:name="android.permission.WRITE_CALENDAR" />
 
     <application
         android:allowBackup="true"
@@ -22,6 +24,8 @@
         android:theme="@style/Theme.FreePreAndroid"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+
+
         <activity
             android:name=".PeriodUnderwearActivity"
             android:exported="false" />
@@ -74,7 +78,7 @@
             android:value="ocr" />
 
         <activity
-            android:name=".FreeActivity"
+            android:name=".GoogleLoginActivity"
             android:exported="true" />
         <activity
             android:name=".NicknameActivity"
@@ -116,7 +120,7 @@
             android:name=".MainActivity"
             android:exported="false" />
         <activity
-            android:name=".GoogleLoginActivity"
+            android:name=".FreeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
