[FEAT]recent period api 연결

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -140,10 +140,10 @@
             android:exported="false" />
         <activity
             android:name=".RecentPeriodActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".FirstPeriodActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".MainActivity"
             android:exported="false" />
