--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -119,7 +119,7 @@
             android:exported="false" />
         <activity
             android:name=".EditPeriodActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".EditPeriodListActivity"
             android:exported="false" />
