[FEAT]Edit period list api 연결

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -122,7 +122,7 @@
             android:exported="true" />
         <activity
             android:name=".EditPeriodListActivity"
-            android:exported="false" />
+            android:exported="true" />
         <activity
             android:name=".FreeAlarmEditActivity"
             android:exported="true" />
