--- a/app/build.gradle
+++ b/app/build.gradle
@@ -95,4 +95,9 @@ dependencies {
     implementation 'com.github.prolificinteractive:material-calendarview:2.0.1'
     implementation 'com.jakewharton.threetenabp:threetenabp:1.1.1'
 
+    //recycler view
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
+    //선택 모두의 항목 선택 제어용
+    implementation 'androidx.recyclerview:recyclerview-selection:1.1.0'
+
 }
