--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,22 +12,28 @@
     <uses-permission android:name="android.permission.ACCESS_BACKGROUND_LOCATION" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
-
-    <uses-feature android:name="android.hardware.sensor.accelerometer" android:required="true" /> <!--가속도계센서-진동,운동가속을 감지-->
+    <uses-permission android:name="android.permission.RECORD_AUDIO" /> <!-- tts -->
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" /> <!-- tts -->
+    <uses-feature
+        android:name="android.hardware.sensor.accelerometer"
+        android:required="true" />
 
     <application
+        android:name=".model.GlobalVariable"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
+        android:hardwareAccelerated="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FreePreAndroid"
         android:usesCleartextTraffic="true"
-        android:hardwareAccelerated="true"
-        android:name=".model.GlobalVariable"
         tools:targetApi="31">
+        <activity
+            android:name=".PreSettingActivity"
+            android:exported="false" />
         <activity
             android:name=".information.PreProductActivity"
             android:exported="true" />
