--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,8 @@
     <uses-permission android:name="android.permission.WRITE_CALENDAR" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" /> <!-- tts -->
     <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" /> <!-- tts -->
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
     <uses-feature
         android:name="android.hardware.sensor.accelerometer"
         android:required="true" />
